--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "4.6",
     "fast-xml-parser": "^4.0.0-beta.8",
+    "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "xml2js": "^0.4.23",
